# rwl

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  clippy.toml  flake.nix
.github/: CODE_OF_CONDUCT.md
docs/: ARCHITECTURE.md  CONFIGURATION.md  FEATURES.md  IPC.md
examples/config/: bar.lua  config.lua  keys.lua
src/: actions.rs  error.rs  ipc.rs  main.rs  monitor.rs  render.rs  state.rs  window.rs
src/backend/: mod.rs  udev.rs
src/config/: keybinds.rs  lua.rs  mod.rs  settings.rs  types.rs
src/features/: fade.rs  gaps.rs  hooks.rs  mod.rs  overview.rs  pertag_layouts.rs  scratchpad.rs  startup_cmds.rs  swallow.rs  tag_transition.rs  wallpaper.rs  winit.rs
src/features/bar/: blocks.rs  color.rs  draw.rs  dwl_ipc.rs  ffi.rs  mod.rs  parse.rs
src/features/bar/azoth-render/src/: ffi.rs  lib.rs  render.rs
src/features/effects/: gaps.rs  mod.rs  rounded_corners.rs  startup_zoom.rs
src/features/integration/: hooks.rs  mod.rs  warp.rs  winit.rs
src/features/integration/ipc/: event.rs  mod.rs  server.rs
src/features/ipc/: event.rs  mod.rs  server.rs
src/features/layout/: bstack.rs  centeredmaster.rs  col.rs  dwindle.rs  mod.rs  monocle.rs  scroll.rs  tile.rs
src/features/overview/: font.rs
src/features/session/: lock.rs  mod.rs
src/features/shell/: mod.rs
src/features/shell/bar/: blocks.rs  config.rs  mod.rs  text.rs
src/features/shell/bar/azoth-render/: Cargo.toml  build.rs
src/features/shell/bar/azoth-render/src/: lib.rs  render.rs
src/features/windows/: auto_back_empty_tag.rs  mod.rs  pertag_layouts.rs  pip.rs  swallow.rs
src/features/windows/overview/: mod.rs
src/grab/: mod.rs  move_grab.rs  resize_grab.rs
src/handlers/: compositor.rs  data_device.rs  gamma_control.rs  idle.rs  input.rs  layer_shell.rs  mod.rs  output.rs  screencopy.rs  seat.rs  session_lock.rs  xdg_decoration.rs  xdg_shell.rs  xwayland.rs
