[package]
name = "azoth-render"
version = "0.1.0"
edition = "2021"

# This crate wraps C libraries (fcft + pixman) via FFI.
# Unsafe is necessary here and is intentionally allowed.

[dependencies]
libc = "0.2"

[lints.rust]
# unsafe_code = "forbid"
unused_must_use = "deny"

[lints.clippy]
enum_glob_use = "deny"
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
panic = "deny"
unwrap_used = "deny"
expect_used = "deny"
implicit_clone = "deny"
redundant_clone = "deny"
mut_mut = "deny"
needless_pass_by_value = "deny"
